# family-tree-project

./: .gitignore
family-tree-backend/: pyproject.toml
family-tree-backend/family_tree_backend/: __init__.py  __main__.py  family_tree.py  person.py  rdf_interface.py  resolver.py  vocabulary.py
family-tree-backend/family_tree_backend/controller/: api.py
family-tree-backend/family_tree_backend/model/: family_tree.py  person.py  person_light.py  vocab.py
family-tree-backend/family_tree_backend/util/: exceptions.py  rdf_interface.py
family-tree-backend/model/: family-tree-model.ttl
family-tree-backend/tests/: test_family_tree.py  test_person.py  test_person_light.py
family-tree-backend/tests/resources/: simple_and_complete.ttl  test_person.py
family-tree-frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
family-tree-frontend/e2e/src/: app.e2e-spec.ts
family-tree-frontend/src/app/: app.component.spec.ts  app.component.ts
