[tool.poetry]
name = "family-tree-backend"
version = "0.1.0"
description = ""
authors = ["Nico Makowe"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
rdflib = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
